--- a/projects/demo/src/index.html
+++ b/projects/demo/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <invp-app></invp-app>
+    <invp-app />
   </body>
 </html>
