--- a/projects/example/src/index.html
+++ b/projects/example/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -14,6 +14,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
   <body class="mat-typography">
-    <invp-ex-app></invp-ex-app>
+    <invp-ex-app />
   </body>
 </html>
